--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,9 @@
           <ul class="menu">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
-          </ul>
+						<li><a href="{{ url_for('jane') }}">Jane</a></li>
+						<li><a href= "{{url_for('static',filename='Rauan_Akylzhanov_CV.pdf')}}">CV</a></li>
+					</ul>
         </nav></strong>
       </div>
     </header>
