--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>About me</h1>
-<p>This is a portfolio site about anything that can be put in a portfolio.</p>
+<h1>Project Description</h1>
+<p>
+Quantum computers 
+</p>
+<p>
+[1] Borders, W.A., Pervaiz, A.Z., Fukami, S. et al. Integer factorization using stochastic magnetic tunnel junctions. Nature 573, 390–393 (2019) doi:10.1038/s41586-019-1557-9
+
+</p>
 </body>
 </html>
