new problem added

--- a/templates/jane.html
+++ b/templates/jane.html
@@ -13,6 +13,9 @@
 					 Flip 98 fair coins and 1 HH coin and 1 TT coin. Given that you see an H, what is the probability that it was the HH coin?
 					 Explain in layman's terms.
 				 </li>
+				 <li>
+					 You roll a 100-sided die. You can choose to accept the value of this roll for $x, where x is the value showing. You can choose to re-roll the die for $1. What is the strategy you employ and what is the fair value of the game?
+				</li>
 			 </ul>
    </div>
  {% endblock %}
