--- a/templates/jane.html
+++ b/templates/jane.html
@@ -16,6 +16,11 @@
 				 <li>
 					 You roll a 100-sided die. You can choose to accept the value of this roll for $x, where x is the value showing. You can choose to re-roll the die for $1. What is the strategy you employ and what is the fair value of the game?
 				</li>
+				<li>
+					Roll a 30-sided die. Add up each consecutive outcome. Stop rolling when the sum >= 300. What's the most likely result of the sum?
+
+
+				</li>
 			 </ul>
    </div>
  {% endblock %}
