one more prob question

--- a/templates/jane.html
+++ b/templates/jane.html
@@ -18,8 +18,9 @@
 				</li>
 				<li>
 					Roll a 30-sided die. Add up each consecutive outcome. Stop rolling when the sum >= 300. What's the most likely result of the sum?
-
-
+				</li>
+				<li>
+					What is the pobability of getting exactly 500 heads out of 1000 coin flips? Approximate it to within 5% of the true value without a calculator.
 				</li>
 			 </ul>
    </div>
